[tool.poetry]
name = "python-impl"
version = "0.1.0"
description = ""
authors = ["Cayin Wan <wenzhongwen233@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
matplotlib = "^3.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
